2/16.Automation_of_administration._Ansible/provisioning/iptables_inetRouter.rules
# Generated by iptables-save v1.4.7 on Tue Jul  3 11:21:53 2018
*nat
:PREROUTING ACCEPT [1:84]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [3:256]
-A POSTROUTING ! -d 192.168.0.0/16 -o eth0 -j MASQUERADE 
COMMIT
# Completed on Tue Jul  3 11:21:53 2018
# Generated by iptables-save v1.4.7 on Tue Jul  3 11:21:53 2018
*filter
:INPUT ACCEPT [221:20754]
:FORWARD ACCEPT [9:724]
:OUTPUT ACCEPT [134:16270]
:TRAFFIC - [0:0]
:SSH-INPUT - [0:0]
:SSH-INPUTTWO - [0:0]
# TRAFFIC chain for Port Knocking. The correct port sequence in this example is  8991 -> 7766 -> 5591; any other sequence will drop the traffic 
-A INPUT -j TRAFFIC
-A TRAFFIC -p icmp --icmp-type any -j ACCEPT
-A TRAFFIC -m state --state ESTABLISHED,RELATED -j ACCEPT
-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 22 -m recent --rcheck --seconds 30 --name SSH2 -j ACCEPT
-A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name SSH2 --remove -j DROP
-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 5591 -m recent --rcheck --name SSH1 -j SSH-INPUTTWO
-A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name SSH1 --remove -j DROP
-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 7766 -m recent --rcheck --name SSH0 -j SSH-INPUT
-A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name SSH0 --remove -j DROP
-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 8991 -m recent --name SSH0 --set -j DROP
-A SSH-INPUT -m recent --name SSH1 --set -j DROP
-A SSH-INPUTTWO -m recent --name SSH2 --set -j DROP 
-A TRAFFIC -j REJECT
COMMIT
# END or further rules
